Fixed word wrapping in firefox

--- a/style.css
+++ b/style.css
@@ -53,4 +53,5 @@ label {
 	max-width: 100px;
 	min-width: 100px;
 	display: inline-block;
+	word-wrap: break-word;
 }
